fix-scrollbar-overview-e-stile

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -12,5 +12,12 @@
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3; 
-    overflow: hidden;  
+    overflow: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: scroll; 
+}
+
+.overview::-webkit-scrollbar{
+    display: none;
 }
